force-app/main/default/objects/ucinn_ascendv2__Strategy__c/ucinn_ascendv2__Strategy__c.object-meta.xml
<CustomObject>
    <description>Documents any internal user&apos;s strategy on how to approach/interact with the constituent/organization during prospect management.</description>
    <label>Strategy</label>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>