force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <externalId>true</externalId>
    <label>Contact Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>