force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confidential</label>
    <type>Checkbox</type>
</CustomField>