force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Responsible_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Responsible_Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Fundraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategies_Responsible_Fundraiser</relationshipName>
    <type>Lookup</type>
</CustomField>