force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Status_to_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status_to_Date__c</fullName>
    <label>Status to Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>