force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Strategy_Detail__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Strategy_Detail__c</fullName>
    <label>Strategy Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>