force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Strategy_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Strategy_Name_Auto_Number__c</fullName>
    <displayFormat>ST-{0000000}</displayFormat>
    <label>Strategy Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>