force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Strategy_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Strategy_Number__c</fullName>
    <externalId>true</externalId>
    <label>Strategy Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>