force-app/main/default/objects/ucinn_ascendv2__Strategy__c/fields/ucinn_ascendv2__Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>