force-app/main/default/objects/ucinn_ascendv2__Strategy__c/recordTypes/ucinn_ascendv2__Account_Strategy.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Strategy</fullName>
    <active>true</active>
    <description>A strategy on how to approach a corporation or organization.</description>
    <label>Organization Strategy</label>
</RecordType>