force-app/main/default/objects/ucinn_ascendv2__Strategy__c/recordTypes/ucinn_ascendv2__Contact_Strategy.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Strategy</fullName>
    <active>true</active>
    <description>A strategy on how to approach a constituent.</description>
    <label>Constituent Strategy</label>
</RecordType>