force-app/main/default/objects/ucinn_ascendv2__Strategy__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__Responsible_Fundraiser__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Strategy_Detail__c</columns>
    <columns>ucinn_ascendv2__Strategy_Summary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>